Actually fix alignment on mobile????

--- a/src/components/index.css
+++ b/src/components/index.css
@@ -281,14 +281,17 @@ img {
 @media (max-width: 992px) {
   .wrapper {
     padding-top: 0;
+    padding-right: 0;
+    padding-left: 0;
   }
 
   .more-videos-header {
     border-top: 0;
+    padding: 0 30px;
   }
 
   .more-videos {
-    /* grid-template-columns: 100vw; */
+    grid-template-columns: 100vw;
   }
 }
 
@@ -300,7 +303,7 @@ img {
   }
 
   .more-videos {
-    /* grid-template-columns: 100vw; */
+    grid-template-columns: 100vw;
     /* grid-auto-flow: row; */
   }
 }
